<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/card_main_layout"
    android:background="@color/U">


    <TextView
        android:id="@+id/text_view_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/display_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/buttons_layout"
        app:layout_constraintTop_toBottomOf="@id/text_view_activity_title" />



    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/go_to_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/go_to_scryfall"
            android:onClick="goToWeb"
            tools:src="@drawable/ic_go_to_web" />

        <Button
            android:id="@+id/button_flavor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="requestNewCard"
            android:text="@string/next_button"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/add_to_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/add_to_favorites"
            android:cropToPadding="false"
            android:onClick="addToFavorites"
            tools:src="@drawable/ic_favorite_empty" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>